tests/config_module_name_mapper_PROJECT_ROOT-1.0/config_module_name_mapper_PROJECT_ROOT-1.0.exp
Error ----------------------------------------------------------------------------------------------------- main.js:6:17

Cannot assign `test` to `b` because number [1] is incompatible with string [2].

   main.js:6:17
   6| var b: string = test; // Error: number ~> string
                      ^^^^

References:
   src/testmodule.js:3:19
   3| export let test = 42;
                        ^^ [1]
   main.js:6:8
   6| var b: string = test; // Error: number ~> string
             ^^^^^^ [2]



Found 1 error
